--- a/mysite/polls/templates/user-list.html
+++ b/mysite/polls/templates/user-list.html
@@ -117,7 +117,7 @@
         	<section class="mainwrappcont">
             
             	<!--top link start here-->
-              <div class="topbluepanel">
+                <div class="topbluepanel">
 				<ul class="toplinkpanel">
 				  <li class="mobilwidt"><a href="#" class="user">Add User</a></li>
 				</ul>
@@ -139,7 +139,7 @@
 			  </div>
                 <!--top link end here-->
                 
-                   <section class="topfityone">
+                 <section class="topfityone">
 					<section class="cotentitlepan_add"> 
                     	 <div class="theGrid">
                 <div class="gridTop">
@@ -169,7 +169,7 @@
                     </li>-->
                     <div class="clear"></div>
                   </ul>
-                  		<input type="search" name="input-filter" id="input-filter" placeholder="Search" class="search_box" />
+                  	<input type="search" name="input-filter" id="input-filter" placeholder="Search" class="search_box" />
                     <input type="submit" value="" id="txtsubmit" name="txtsubmit" class="search_btn" />
                   <div class="clear"></div>
                 </div>
@@ -217,12 +217,13 @@
 					</tbody>
 					</table>
 					
+                   
                     
                  
                     </section>
                     </div>
               <!--Table Ends-->
-                     
+                      
 						
                 </div>
               <!--Table Ends-->
@@ -256,30 +257,65 @@
           </section>
         </section>
       </section>
-        <!--section right panel end here-->
-    
+      <!--section right panel end here--> 
+      
     </section>
-    </section>
+  </section>
 	<div id="boxes">
-	<div  id="dialog" class="window win-main">
+	<div id="dialog" class="window win-main">
 	<div class="setup-head"> Initial Setup Wizard</div>
 	<div align="right" class="close-btn"><a href="javascript:void()" class="close"><img src="{{STATIC_URL}}polls/images/close_btn.png" width="16" style="border:none; cursor:pointer;" /></a></div>
 	
 	<div align="center" class="step1-text">
-	<div class="click-text">
-		<div class="img-first"><img src="{{STATIC_URL}}polls/images/success.png"></div>
-		<div class="dwn-file">Your VisualORG system has been completed successfully!</div>
-		<div></div>
-	</div>
-	</div>
 	
+	<div class="click-text">
+		<div class="img-first"><img src="{{STATIC_URL}}polls/images/setup-failed.png"></div>
+		<div class="dwn-file">Your VisualORG system has not completed successfully.!</div>
+		<div class="fail-div">
+		<input type="button" name="abort" value="Abort" id="abort" class="abort-btn"/>
+		<input type="button" name="continue" value="Retry" id="continue" class="retry-btn"/>
+		</div>
+	</div>
+	</div>
+	<div class="footer_txt">
+	<p>You will need to fix following fields:</p>
+	<ul>
+	<li>Value Can't be Blank</li>
+	<li>Description Can't be Blank</li>
+	</ul>
+	</div>
 	</div>
 	
 	<!-- Mask to cover the whole screen -->
 	<div style="width: 2000px; height: 2000px; display: none; opacity: 0.7;" id="mask"></div>
 	</div>
 	
+	<div id="boxes1">
+	<div  id="dialog1" class="window1 win-main">
+	<div class="setup-head"> Initial Setup Wizard</div>
+	<div align="right" class="close-btn"><a href="javascript:void()" class="close"><img src="{{STATIC_URL}}polls/images/close_btn.png" width="16" style="border:none; cursor:pointer;" /></a></div>
 	
+	<div align="center" class="step1-text">
+	<p>Configuring Your VisualOrg System is quick and easy and can be completed in the following steps.</p>
+	<div class="click-text">
+		<div class="img-first"><img src="{{STATIC_URL}}polls/images/2.png"></div>
+		<div class="dwn-file">Upload Your Completed Spreadsheet Below</div>
+		
+	</div>
+	<form action="/home/upload/" method="post" class="form-horizontal"
+                      enctype="multipart/form-data" accept-charset="utf-8" id="cpform"> {% csrf_token %}
+		<input type="file" name="csvData" id="csvData" accept=".csv" class="file-browse" />
+		<input type="submit" name="done" value="Done" id="done" class="cont-btn1"/>
+		</form>
+	</div>
+	<div class="footer_txt">
+	<p>Configuring Your VisualOrg System is quick and easy and can be completed in the following steps.</p>
+	</div>
+	</div>
+	
+	<!-- Mask to cover the whole screen -->
+	<div style="width: 2000px; height: 2000px; display: none; opacity: 0.7;" id="mask1"></div>
+	</div>
     <!--content panel end here-->
 
 </section>
@@ -287,7 +323,7 @@
 <script type="text/javascript" src="{{STATIC_URL}}polls/jquery.min.js"></script>
 <script type="text/javascript" src="{{STATIC_URL}}polls/scripts.js"></script>
 <script type="text/javascript" src="{{STATIC_URL}}polls/jquery.slimscroll.js"></script>
-<script src="{{STATIC_URL}}polls/jquery.filtertable.min.js" type="text/javascript"></script>
+
 <script type="text/javascript">
     $(function(){
 
@@ -301,117 +337,15 @@
 
     });
 </script>
-
+<script src="{{STATIC_URL}}polls/jquery.bvalidator.js" type="text/javascript"></script>
+<link href="{{STATIC_URL}}polls/bvalidator.css" rel="stylesheet" type="text/css" />
+<script src="{{STATIC_URL}}polls/jquery.filtertable.min.js" type="text/javascript"></script>
 <script type="text/javascript">
 	$(document).ready(function() {	
-	 $('table').filterTable({ // apply filterTable to all tables on this page
+	$('#cpform').bValidator();
+		 $('table').filterTable({ // apply filterTable to all tables on this page
             inputSelector: '#input-filter' // use the existing input instead of creating a new one
         });
-			var id = '#dialog';
-		
-			//Get the screen height and width
-			var maskHeight = $(document).height();
-			var maskWidth = $(window).width();
-		
-			//Set heigth and width to mask to fill up the whole screen
-			$('#mask').css({'width':maskWidth,'height':maskHeight});
-			
-			//transition effect		
-			$('#mask').fadeIn(800);	
-			$('#mask').fadeTo("slow",0.8);	
-		
-			//Get the window height and width
-			var winH = $(window).height();
-			var winW = $(window).width();
-				  
-			//Set the popup window to center
-			$(id).css('top',  winH/2-$(id).height()/2 -50);
-			$(id).css('left', winW/2-$(id).width()/2);
-		
-			//transition effect
-			$(id).fadeIn(500); 
-			$( id ).fadeOut(8000, function() {
-			$('#mask').hide();
-			$('.window').hide();
-			$("#datalist").show();
-				
-			});
-		
-		//if close button is clicked
-		$('.window .close').click(function (e) {
-			//Cancel the link behavior
-			e.preventDefault();
-			
-			$('#mask').hide();
-			$('.window').hide();
-		});		
-		
-		//if mask is clicked
-		$('#mask').click(function () {
-			$(this).preventDefault();
-			$(this).hide();
-			$('.window').hide();
-		});		
-		
-		$("#continue").click(function(){
-		
-			$('.window').hide();
-		var id = '#dialog1';
-		
-			//Get the screen height and width
-			var maskHeight = $(document).height();
-			var maskWidth = $(window).width();
-		
-			//Set heigth and width to mask to fill up the whole screen
-			$('#mask1').css({'width':maskWidth,'height':maskHeight});
-			
-			//transition effect		
-			$('#mask1').fadeIn(800);	
-			$('#mask1').fadeTo("slow",0.8);	
-		
-			//Get the window height and width
-			var winH = $(window).height();
-			var winW = $(window).width();
-				  
-			//Set the popup window to center
-			$(id).css('top',  winH/2-$(id).height()/2 -50);
-			$(id).css('left', winW/2-$(id).width()/2);
-		
-			//transition effect
-			$(id).fadeIn(500); 	
-		
-		//if close button is clicked
-		$('.window .close').click(function (e) {
-			//Cancel the link behavior
-			e.preventDefault();
-			
-			$('#mask1').hide();
-			$('.window1').hide();
-		});		
-		
-		//if mask is clicked
-		$('#mask').click(function () {
-			$(this).preventDefault();
-			$(this).hide();
-			$('.window1').hide();
-		});	
-	});
-		$("#done").click(function(){
-			var csvData
-		csvData = $("#csvData").val();
-		$.ajax({
-			url:"/home/upload/",
-			type: "POST",
-			data: {csvData: csvData,csrfmiddlewaretoken: '{{ csrf_token }}'},
-			success:function(response){
-				alert(response);
-			},
-			complete:function(){},
-			error:function (xhr, textStatus, thrownError){
-			//alert("error doing something");
-			}
-		});
-		});
 	});
 	function listinactive(id)
 	{
@@ -526,6 +460,7 @@
 		
 	}
 	$(document).ready(function() {
+	
     $('#selectall').click(function(event) {  //on click 
         if(this.checked) { // check select status
             $('.checkbox1').each(function() { //loop through each checkbox
@@ -540,6 +475,5 @@
     
 });
 	</script>
-	
 </body>
 </html>
