--- a/mysite/polls/templates/base.html
+++ b/mysite/polls/templates/base.html
@@ -6,30 +6,10 @@
 <link href="{{STATIC_URL}}polls/screen.css" rel="stylesheet" type="text/css" />
 <script src="{{STATIC_URL}}polls/jquery.min.js" type="text/javascript"></script>
 <script src="{{STATIC_URL}}polls/html5.js" type="text/javascript"></script>
+<script src="{{STATIC_URL}}polls/jquery.bvalidator.js" type="text/javascript"></script>
+<link href="{{STATIC_URL}}polls/bvalidator.css" rel="stylesheet" type="text/css" />
+<link href="{{STATIC_URL}}polls/responsive-layout.css" rel="stylesheet" type="text/css" />
+<script src="{{STATIC_URL}}polls/jquery.filtertable.min.js" type="text/javascript"></script>
 <style type="text/css">
 body {display:table;}
 </style>
-</head>
-
-<body>
-
-<div class="adminloginwrapp">
-	
-    <!--admin login panel div start here-->
-    <section class="adminloginpanel">
-    	<h2><img src="{{STATIC_URL}}polls/admin-logo.png" alt=""/></h2>
-       <p>People with 3 experience:</p>
-		<ul>
-			{% for question in questions %}
-				<li>{{ question }}</li>
-			{% empty %}
-				<li>Nobody has 3 experience!</li>
-			{% endfor %}
-		</ul>
-    </section>
-    <!--admin login panel div end here-->
-
-</div>
-
-</body>
-</html>
