--- a/mysite/polls/templates/email.html
+++ b/mysite/polls/templates/email.html
@@ -1,14 +1,4 @@
-<html>
-<head>
-<title>Welcome to Vorg</title>
-<link href="{{STATIC_URL}}polls/style.css" rel="stylesheet" type="text/css">
-<link href="{{STATIC_URL}}polls/reset.css" rel="stylesheet" type="text/css" />
-<link href="{{STATIC_URL}}polls/screen.css" rel="stylesheet" type="text/css" />
-<script src="{{STATIC_URL}}polls/jquery.min.js" type="text/javascript"></script>
-<script src="{{STATIC_URL}}polls/html5.js" type="text/javascript"></script>
-<style type="text/css">
-body {display:table;}
-</style>
+{% include "base.html" %}
 </head>
 
 <body>
