--- a/mysite/polls/templates/register.html
+++ b/mysite/polls/templates/register.html
@@ -1,16 +1,4 @@
-<html>
-<head>
-<title>Welcome to Vorg</title>
-<link href="{{STATIC_URL}}polls/style.css" rel="stylesheet" type="text/css">
-<link href="{{STATIC_URL}}polls/reset.css" rel="stylesheet" type="text/css" />
-<link href="{{STATIC_URL}}polls/screen.css" rel="stylesheet" type="text/css" />
-<script src="{{STATIC_URL}}polls/jquery.min.js" type="text/javascript"></script>
-<script src="{{STATIC_URL}}polls/html5.js" type="text/javascript"></script>
-<script src="{{STATIC_URL}}polls/jquery.bvalidator.js" type="text/javascript"></script>
-<link href="{{STATIC_URL}}polls/bvalidator.css" rel="stylesheet" type="text/css" />
-<style type="text/css">
-body {display:table;}
-</style>
+{% include "base.html" %}
 <script type="text/javascript"> 
     $(document).ready(function () {
         $('#cpform').bValidator();
@@ -38,7 +26,29 @@ body {display:table;}
 			},
 			complete:function(){},
 			error:function (xhr, textStatus, thrownError){
-			alert("error doing something");
+			
+			}
+		});
+	}
+	function chkcompany(){
+		var comp_name
+		comp_name = $("#company_name").val();
+		$.ajax({
+			url:"/register/chk_comp/",
+			type: "POST",
+			data: {comp_name: comp_name,csrfmiddlewaretoken: '{{ csrf_token }}'},
+			success:function(response){
+				if(response == "no")
+					return true;
+				else
+					$('#error').html('Username Already Exist!');
+					$('#company_name').focus();
+					$('#error').delay(3200).fadeOut(300);
+					return false;
+			},
+			complete:function(){},
+			error:function (xhr, textStatus, thrownError){
+			
 			}
 		});
 	}
@@ -61,6 +71,10 @@ body {display:table;}
                 
             </div>
 			<span style="color:red" id="error"></span>
+			<div class="loginhgtdiv">
+            	<label for="company_name">Company Name</label>
+                <input type="text"  name="Company_name" id="company_name" data-bvalidator="required" onblur="return chkcompany()"/>
+            </div>
 			<div class="loginhgtdiv">
             	<label for="first_name">First Name</label>
                 <input type="text"  name="First_name" id="first_name" data-bvalidator="alpha,required"/>
